// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select rendering renders expected elements 1`] = `
<div
  className="Select Test"
>
  <div
    aria-activedescendant={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns={null}
    className="Select__text"
    id="test"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="0"
  >
    Two
    <SvgIcon
      className="Select__icon"
      icon={
        Object {
          "icon": Array [],
          "iconName": "caret-down",
          "prefix": "fas",
        }
      }
    />
  </div>
</div>
`;

exports[`Select rendering renders expected elements when className is not set 1`] = `
<div
  className="Select"
>
  <div
    aria-activedescendant={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns={null}
    className="Select__text"
    id="test"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="0"
  >
    Two
    <SvgIcon
      className="Select__icon"
      icon={
        Object {
          "icon": Array [],
          "iconName": "caret-down",
          "prefix": "fas",
        }
      }
    />
  </div>
</div>
`;

exports[`Select rendering renders expected elements when disabled is true 1`] = `
<div
  className="Select Test"
>
  <div
    aria-activedescendant={null}
    aria-disabled={true}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns={null}
    className="Select__text"
    id="test"
    onBlur={[Function]}
    role="button"
  >
    Two
    <SvgIcon
      className="Select__icon"
      icon={
        Object {
          "icon": Array [],
          "iconName": "caret-down",
          "prefix": "fas",
        }
      }
    />
  </div>
</div>
`;

exports[`Select rendering renders expected elements when error is true 1`] = `
<div
  className="Select Test"
>
  <div
    aria-activedescendant={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns={null}
    className="Select__text Select__text--error"
    id="test"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="0"
  >
    Two
    <SvgIcon
      className="Select__icon"
      icon={
        Object {
          "icon": Array [],
          "iconName": "caret-down",
          "prefix": "fas",
        }
      }
    />
  </div>
</div>
`;

exports[`Select rendering renders expected elements when open is true 1`] = `
<div
  className="Select Test"
>
  <div
    aria-activedescendant="test-1"
    aria-expanded={true}
    aria-haspopup="listbox"
    aria-owns="test-list"
    className="Select__text"
    id="test"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="0"
  >
    Two
    <SvgIcon
      className="Select__icon"
      icon={
        Object {
          "icon": Array [],
          "iconName": "caret-up",
          "prefix": "fas",
        }
      }
    />
  </div>
  <div
    className="Select__list"
    id="test-list"
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    onMouseUp={[Function]}
    role="listbox"
  >
    <div
      aria-selected={false}
      className="Select__option"
      data-index={0}
      id="test-0"
      role="option"
    >
      One
    </div>
    <div
      aria-selected={true}
      className="Select__option Select__option--focused"
      data-index={1}
      id="test-1"
      role="option"
    >
      Two
    </div>
    <div
      aria-selected={false}
      className="Select__option"
      data-index={2}
      id="test-2"
      role="option"
    >
      Three
    </div>
  </div>
</div>
`;

exports[`Select rendering renders expected elements when value is not set 1`] = `
<div
  className="Select Test"
>
  <div
    aria-activedescendant={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns={null}
    className="Select__text Select__text--empty"
    id="test"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="0"
  >
    Testing
    <SvgIcon
      className="Select__icon"
      icon={
        Object {
          "icon": Array [],
          "iconName": "caret-down",
          "prefix": "fas",
        }
      }
    />
  </div>
</div>
`;
